# ITKArrayFire

./: .travis.yml  CMakeLists.txt  README.rst  circle.yml  itk-module-init.cmake  itk-module.cmake  pyproject.toml  setup.py
include/: itkAFDataManager.h  itkAFDataManager.hxx  itkAFImage.h  itkMinimalStandardRandomVariateGenerator.h  itkNormalDistributionImageSource.h  itkafDataManager.h  itkafDataManager.hxx  itkafImage.h
src/: CMakeLists.txt
test/: CMakeLists.txt  itkAFImageTest.cxx
wrapping/: CMakeLists.txt  itkAFDataManager.wrap  itkafDataManager.wrap
